--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="static/images/Viral.jpg" alt="" /></span>
+							<span class="avatar"><img src="user.jpg" alt="" /></span>
 							<h1>Veer</h1>
 							<p>a professional Python Developer</p>
 						</header>
